<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InSynergy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_message">Username</string>
    <string name="pwd_message">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_profile_page">Profile</string>
    <string name="assessment_status">Assessment Status</string>
    <string name="enquiry">Enquiry</string>
    <string name="title_activity_enquiry_page">Contact Us</string>
    <string name="to">Email</string>
    <string name="switchText">Link Number</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="num">Number</string>
    <string name="beno">BE No.</string>
    <string name="imp_name">Importer Name</string>
    <string name="fs">F/S</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="descimage">Logo</string>
    <string name="save_btn">Save</string>
    <string name="in_rms">Assessed in RMS</string>
    <string name="ufs">Under First Check</string>
    <string name="final_assessed">Final Assessed</string>
    <string name="prov_assessed">Prov Assessed</string>
    <string name="duty_change">Duty Changed</string>
    <string name="duty_amount">Duty Amount : </string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_assessment">Assessment</string>

    <color name="info_color">#C0C0C0</color>
    <color name="info_text_color">#000000</color>
    <color name="second_grey">#ffeeeeee</color>
    <color name="card_white">#ffffffff</color>
    <color name="card_shadow">#8c666666</color>
    <color name="activity_background">#bfbfbf</color>

    <string name="title_activity_entry_form">Entry Form</string>

</resources>
