<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="46dp"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.14"
        android:contentDescription="@string/descimage"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/user_message"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/pwd_message"
        android:inputType="textPassword" />

    <Button android:id="@+id/login"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:hapticFeedbackEnabled="true"
        android:onClick="logIn"
        android:text="@string/button_login" />

</LinearLayout>