<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="6dp"
    tools:context=".EntryForm">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="64dp"
        android:layout_width="match_parent"
        android:background="@drawable/shapes" 
        android:weightSum="1">
 
        <TextView
            android:id="@+id/total"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/info_text_color"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout 
		    android:orientation="vertical"
		    android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:weightSum="3">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/totalFiling"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/fileUnderFC"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/fileUnderSC"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    	</LinearLayout>
	</TableRow>
	<TableRow
        android:id="@+id/tableRow2"
        android:layout_height="64dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:background="@drawable/shapes" 
        android:weightSum="1">
 
        <LinearLayout 
		    android:orientation="vertical"
		    android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:weightSum="3">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/name"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/benoDate"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/goods"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    	</LinearLayout>
        
        <LinearLayout 
		    android:orientation="vertical"
		    android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:weightSum="3">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/grossWeight"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/presentStatus"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    		<TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
		            android:id="@+id/packages"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:textColor="@color/info_text_color"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
    		</TableRow>
    	</LinearLayout>
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="6dp"
	    android:weightSum="1" >

        <TextView
		   	android:id="@+id/dutyAmount"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:text="@string/duty_amount"
		    android:textColor="@color/info_text_color"
		   	android:textAppearance="?android:attr/textAppearanceSmall" />
        <EditText
	        android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_weight="0.5"
	        android:inputType="text" />
    </TableRow>
    <Switch
        android:id="@+id/inRMS"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/in_rms" />
    <Switch
        android:id="@+id/underFirstCheck"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ufs" />
    <Switch
        android:id="@+id/finalAssessed"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/final_assessed" />
    <Switch
        android:id="@+id/provAssessed"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prov_assessed" />
     <Switch
        android:id="@+id/dutyChanged"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/duty_change" />
     <TableRow
	    android:id="@+id/tableRow4"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dp"
	    android:weightSum="1" >
        <Button
		   	android:id="@+id/cancel"
            android:layout_width="0dp"
            android:text="@string/cancel_btn"
            android:layout_weight="0.5"/>
        <Button
	        android:id="@+id/save"
            android:layout_width="0dp"
            android:text="@string/save_btn"
            android:layout_weight="0.5" />
    </TableRow>
    
</LinearLayout>